Updated Order API Docs
